--- a/argocdod/templates/quaylogs.yaml
+++ b/argocdod/templates/quaylogs.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: keepalive-{{ template "cluster_name" . }}
+  name: quaylogs-{{ template "cluster_name" . }}
   namespace: {{ .Values.argocdNamespace }}
 spec:
   destination:
