--- a/argocdod/apps/quaylogs/templates/deployment.yml
+++ b/argocdod/apps/quaylogs/templates/deployment.yml
@@ -35,7 +35,7 @@ spec:
       schedulerName: default-scheduler
   strategy:
     type: RollingUpdate
-    RollingUpdate:
+    rollingUpdate:
       maxUnavailable: 25%
       maxSurge: 25%
   revisionHistoryLimit: 10
