--- a/argocdod/apps/main-test-apps/values.yaml
+++ b/argocdod/apps/main-test-apps/values.yaml
@@ -2,7 +2,7 @@ configmap:
   splunkUrl: https://13.90.23.80:8088/services/collector/event
   clusterName: ocp43-dev
   splunkToken: 73361832-38a5-4edd-b61f-e1643ecbf7ed
-  servicesRoutes: ["http://minio-test-minio-test.apps.ocp43-dev.cloudlet-dev.com/minio/test"]
+  servicesRoutes: []
   
 containers:
   repository: docker.io/meshistern
