--- a/argocdod/apps/main-test-apps/templates/deployment.yml
+++ b/argocdod/apps/main-test-apps/templates/deployment.yml
@@ -1,25 +1,25 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: app-test-to-splunk
+  name: main-test-apps
   namespace: main-test-apps
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: app-test-to-splunk
+      app: main-test-apps
   template:
     metadata:
       labels:
-        app: app-test-to-splunk
+        app: main-test-apps
     spec:
       volumes:
         - name: config-volume
           configMap:
-            name: app-test-to-splunk
+            name: main-test-apps
             defaultMode: 420
       containers:
-        - name: app-test-to-splunk
+        - name: main-test-apps
           image: '{{ .Values.containers.repository }}/{{ .Values.containers.image }}:{{ .Values.containers.version }}'
           resources: {}
           volumeMounts:
@@ -28,14 +28,14 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           imagePullPolicy: Always
-      restartPilicy: Always
+      restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
       securityContext: {}
       schedulerName: default-scheduler
   strategy:
     type: RollingUpdate
-    RollingUpdate:
+    rollingUpdate:
       maxUnavailable: 25%
       maxSurge: 25%
   revisionHistoryLimit: 10
