--- a/argocdod/apps/main-test-apps/templates/cm.yml
+++ b/argocdod/apps/main-test-apps/templates/cm.yml
@@ -1,8 +1,8 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: app-test-to-splunk
-  namespace: app-test-to-splunk
+  name: main-test-apps
+  namespace: main-test-apps
 data:
   config.py: |+
     splunkUrl = '{{ .Values.configmap.splunkUrl }}'
