--- a/argocdod/apps/node-postgres/charts/pgcluster/templates/secret-monitoring.yaml
+++ b/argocdod/apps/node-postgres/charts/pgcluster/templates/secret-monitoring.yaml
@@ -4,6 +4,6 @@ data:
   DB_USERNAME: {{ index .Values "DB_USERNAME" | toString | b64enc }}
   DB_PASSWORD: {{ index .Values "DB_PASSWORD" | toString | b64enc }}
 metadata:
-  name: node-secret
+  name: 'node-{{ index .Values "PG_CLUSTER_NAME" }}-secret'
   namespace: "{{.Values.PG_NAMESPACE}}"
 type: Opaque
