--- a/argocdod/apps/minio-operator/templates/secrets.yaml
+++ b/argocdod/apps/minio-operator/templates/secrets.yaml
@@ -7,5 +7,5 @@ metadata:
     app: {{ .Values.name }}
 type: Opaque
 data:
-  accesskey: {{ .Values.accesskey }}
-  secretkey: {{ .Values.secretkey }}
+  accesskey: {{ if .Values.accesskey }}{{ .Values.accesskey | b64enc | quote }}{{ else }}{{randAlphaNum 20 |  b64enc | quote}}{{ end }}
+  secretkey: {{ if .Values.secretkey }}{{ .Values.secretkey | b64enc | quote }}{{ else }}{{randAlphaNum 40 |  b64enc | quote}}{{ end }}
