--- a/argocdod/apps/speedtest-download/values.yaml
+++ b/argocdod/apps/speedtest-download/values.yaml
@@ -5,5 +5,5 @@ MAIN_APP_URL: "http://speedtest-download.apps.ocp43-prod.sales.lab.tlv.redhat.co
 SPLUNK_TOKEN: "0dde0859-27ff-43aa-b981-3eaca4fa4813"
 SPLUNK_URL: "https://13.90.23.80:8088/services/collector/event"
 MIN_CHECK_TIME: 2
-OCP_NAME: "ocp43-local"
+OCP_NAME: "ocp43-prod"
 IMAGE_NAME: "registry.hub.docker.com/antonz23/download-cloudlet-app:latest"
