--- a/argocdod/apps/externalsecrets-operator/templates/crds.yaml
+++ b/argocdod/apps/externalsecrets-operator/templates/crds.yaml
@@ -34,6 +34,7 @@ spec:
                 type: object
               backendType:
                 type: string
+                default: vault
                 enum:
                   - secretsManager
                   - systemManager
