--- a/argocdod/apps/quaylogs/values.yaml
+++ b/argocdod/apps/quaylogs/values.yaml
@@ -1,8 +1,8 @@
 configmap:
-  quay_repo: https://quayecosystem-quay-quay-enterprise.apps.ocp43-dev.cloudlet-dev.com
+  quay_repo: https://quayecosystem.apps.ocp43-np.cloudlet-dev.com
   splunk_event_url: https://13.90.23.80:8088/services/collector/event
   cluster_name: prod
-  quay_token: AC0NP7XgQI5LtYKIdX9wt2p0p1X2pFjQbgIvWqMb
+  quay_token: Ctf0c1gweSAqQqUDriOzLXTFdF8gOGcxa3gc6gEF
   splunk_token: 76dfd089-67f2-4262-978e-755af5c0775a
 
 containers:
