--- a/argocdod/apps/quaylogs/values.yaml
+++ b/argocdod/apps/quaylogs/values.yaml
@@ -1,5 +1,5 @@
 configmap:
-  quay_repo: https://quayecosystem.apps.ocp43-np.cloudlet-dev.com
+  quay_repo: https://quayecosystem.apps.ocp43-dev.cloudlet-dev.com
   splunk_event_url: https://13.90.23.80:8088/services/collector/event
   cluster_name: prod
   quay_token: Ctf0c1gweSAqQqUDriOzLXTFdF8gOGcxa3gc6gEF
