--- a/argo-to-splunk/deploy/deployment.yml
+++ b/argo-to-splunk/deploy/deployment.yml
@@ -28,7 +28,7 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           imagePullPolicy: Always
-      restartPilicy: Always
+      restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
       securityContext: {}
