--- a/argo-to-splunk/deploy/deployment.yml
+++ b/argo-to-splunk/deploy/deployment.yml
@@ -16,7 +16,7 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: argo-to-splunk-config
+            name: argo-to-splunk
             defaultMode: 420
       containers:
         - name: argo-to-splunk
