--- a/argo-to-splunk/deploy/cm.yml
+++ b/argo-to-splunk/deploy/cm.yml
@@ -1,7 +1,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: argo-to-splunk-config
+  name: argo-to-splunk
   namespace: argocd
 data:
   config.py: |+
