--- a/argo-to-splunk/deploy/cm.yml
+++ b/argo-to-splunk/deploy/cm.yml
@@ -1,14 +1,14 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: argo-to-splunk
+  name: argo-to-splunk-config
   namespace: argocd
 data:
   config.py: |+
-    argoUrl = 'https://argocd-argocd.apps.ocp43-dev.cloudlet-dev.com/'
+    argoUrl = 'https://argocd-argocd.apps.ocp43-np.cloudlet-dev.com/'
     appsApi = 'api/v1/applications'
     authApi = 'api/v1/session'
-    login = {"username": "admin", "password": "6KEgvtYJaRlbUT82reCWwA4mDinV3OoP"}
+    login = {"username": "admin", "password": "redhat"}
    
     splunkUrl = 'https://13.90.23.80:8088/services/collector/event'
     splunkAuth = {'Authorization': 'Splunk c92a548a-e243-41ab-9168-8a17ce013342'}
