--- a/app_argo/Dockerfile
+++ b/app_argo/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app_argo
 
 RUN pip install httpx requests
 
-COPY ./url_argo_up.py .
+COPY ./app_argo.py .
 
 COPY ./config.py .
 
@@ -12,5 +12,4 @@ RUN addgroup -S dod && adduser -S dod -G dod
 
 USER dod
 
-CMD ["python", "-u", "url_argo_up.py"]
-
+CMD ["python", "-u", "app_argo.py"]
