--- a/argocdod/apps/app-argo/templates/cronjob.yaml
+++ b/argocdod/apps/app-argo/templates/cronjob.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: app_argo
+  name: app-argo
 spec:
   schedule: "*/{{ .Values.every_minutes }} * * * *"
   startingDeadlineSeconds: 300
@@ -11,42 +11,41 @@ spec:
       template:
         spec:
           containers:
-            - name: app_argo
+            - name: app-argo
               image: "{{ .Values.image.repository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
               env:
-                - name: SPLUNK_URL
+                - name: app-argo
                   valueFrom:
                     secretKeyRef:
-                      name: app_argo
+                      name: app-argo
                       key: SPLUNK_URL
                 - name: SPLUNK_TOKEN
                   valueFrom:
                     secretKeyRef:
-                      name: app_argo
+                      name: app-argo
                       key: SPLUNK_TOKEN
                 - name: CLUSTERS_URL
                   valueFrom:
                     secretKeyRef:
-                      name: app_argo
+                      name: app-argo
                       key: CLUSTERS_URL
                 - name: SPLUNK_IP
                   valueFrom:
                     secretKeyRef:
-                      name: app_argo
+                      name: app-argo
                       key: SPLUNK_IP
                 - name: SPLUNK_PORT
                   value: "8089"
                 - name: SPLUNK_USER
                   valueFrom:
                     secretKeyRef:
-                      name: app_argo
+                      name: app-argo
                       key: SPLUNK_USER
                 - name: SPLUNK_PASS
                   valueFrom:
                     secretKeyRef:
-                      name: app_argo
+                      name: app-argo
                       key: SPLUNK_PASS
               imagePullPolicy: IfNotPresent
           restartPolicy: OnFailure
-
 
