--- a/argocdod/apps/quaylogs/templates/cm.yml
+++ b/argocdod/apps/quaylogs/templates/cm.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: quaylogs
 data:
   config.py: |-
-    quay_repo = '{{ .Values.configmap.quay_repo }}' 
+    quay_repo = '{{ .Values.configmap.quay_repo_1 }}.{{ .Values.configmap.cluster_name }}.{{ .Values.configmap.quay_repo_2 }}'
     splunk_event_url = '{{ .Values.configmap.splunk_event_url }}'
     cluster_name = '{{ .Values.configmap.cluster_name }}'
     quay_token = '{{ .Values.configmap.quay_token }}'
