--- a/argocdod/values.yaml
+++ b/argocdod/values.yaml
@@ -5,6 +5,6 @@ spec:
   source:
     repoURL: https://github.com/matancarmeli7/cloudlet
     targetRevision: HEAD
-  project: argocdod
+  project: default
   
 argocdNamespace: argocd
