--- a/argocdod/apps/quay-test/values.yaml
+++ b/argocdod/apps/quay-test/values.yaml
@@ -1,3 +1,3 @@
 configmap:
-  quay_auth = aKXThyi5eunl3PiD54I5s2egtCz69dqSekMqViRd
-  fqdn = cloudlet.dev
+  quay_auth: aKXThyi5eunl3PiD54I5s2egtCz69dqSekMqViRd
+  fqdn: cloudlet.dev
