--- a/argocdod/apps/quay-test/templates/cm.yaml
+++ b/argocdod/apps/quay-test/templates/cm.yaml
@@ -1,8 +1,8 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: main-test-apps
-  namespace: main-test-apps
+  name: quay-test
+  namespace: quay-test
 data:
   config.py: |+
     quay_url_conf = https://quay.{{ .Values.configmap.fqdn }}
