--- a/argocdod/apps/quay-test/templates/cm.yaml
+++ b/argocdod/apps/quay-test/templates/cm.yaml
@@ -6,4 +6,4 @@ metadata:
 data:
   config.py: |+
     quay_url_conf = 'https://quay.apps.{{ .Values.configmap.fqdn }}'
-    quay_auth = {{ .Values.configmap.quay_auth }}
+    quay_auth = '{{ .Values.configmap.quay_auth }}'
