--- a/app_argo/helm/templates/conf.yaml
+++ b/app_argo/helm/templates/conf.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: app_argo-conf
-  namespace:  app_argo
+  name: app-argo-conf
+  namespace: app-argo
 data:
    config.py: |-
      argoUrl = '{{ .Values.configmap.argoUrl }}'
