--- a/argocdod/apps/quay-test/templates/job.yaml
+++ b/argocdod/apps/quay-test/templates/job.yaml
@@ -3,13 +3,14 @@ kind: CronJob
 metadata:
   name: quay-test
   namespace: quay-test
-  labels:
-    app: toston
 spec:
   schedule: "*/1 * * * *"
   startingDeadlineSeconds: 300
   concurrencyPolicy: "Replace"
   jobTemplate:
+    metadata:
+      labels:
+        app_name: toston
     spec:
       template:
         spec:
