--- a/argocdod/templates/app-argo.yaml
+++ b/argocdod/templates/app-argo.yaml
@@ -9,7 +9,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: {{ .Values.spec.project }}
   source:
-    path: argocdod/apps/collectorforopenshift
+    path: argocdod/apps/app-argo
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
