--- a/argocdod/apps/app-argo/templates/conf.yaml
+++ b/argocdod/apps/app-argo/templates/conf.yaml
@@ -12,3 +12,4 @@ data:
      splunkUrl = '{{ .Values.configmap.splunkUrl }}'
      splunkAuth = '{{ .Values.configmap.splunkAuth }}'
      repoApi = '{{ .Values.configmap.repoApi }}'
+     cluster_name = '{{ .Values.configmap.cluster_name }}'
