--- a/app_argo/helm/templates/conf.yaml
+++ b/app_argo/helm/templates/conf.yaml
@@ -12,3 +12,7 @@ data:
      splunkUrl = '{{ .Values.configmap.splunkUrl }}'
      splunkAuth = '{{ .Values.configmap.splunkAuth }}'
      repoApi = '{{ .Values.configmap.repoApi }}'
+     cluster_name = '{{ .Values.configmap.cluster_name }}'
+     reponame = '{{ .Values.configmap.reponame }}'
+     url = '{{ .Values.configmap.url }}'
+     verifySSl = '{{ .Values.configmap.verifySSl }}'
