--- a/argocdod/apps/app-argo/values.yaml
+++ b/argocdod/apps/app-argo/values.yaml
@@ -13,7 +13,7 @@ conf:
   splunkUrl = 'https://13.90.23.80:8088/services/collector/event'
   splunkAuth = {'Authorization': 'Splunk c92a548a-e243-41ab-9168-8a17ce013342'}
   repoApi = 'api/v1/repositories'
-  cluster_name = 'dev'
+  cluster_name = 'np'
   reponame = 'cloudlet'
   url = 'https://argocd.apps.np.cloudlet-dev.com/'
   verifySSl = False
