--- a/argocdod/templates/toston.yaml
+++ b/argocdod/templates/toston.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-argo-{{ template "cluster_name" . }}
+  name: toston-{{ template "cluster_name" . }}
   namespace: {{ .Values.argocdNamespace }}
 spec:
   destination:
