--- a/minio-app-test/deploy/job.yaml
+++ b/minio-app-test/deploy/job.yaml
@@ -1,45 +1,54 @@
-apiVersion: batch/v1beta1
 kind: CronJob
+apiVersion: batch/v1beta1
 metadata:
   name: minio-test
   namespace: minio-test
+  labels:
+    argocd.argoproj.io/instance: minio-test-dev
 spec:
-  schedule: '0 * * * *'
-  backoffLimit: 0
-  replicas: 1
-  selector: {}
+  schedule: '*/1 * * * *'
+  concurrencyPolicy: Replace
+  suspend: false
   jobTemplate:
     metadata:
+      creationTimestamp: null
       labels:
         app: minio-test
-        app_name: toston
     spec:
       template:
+        metadata:
+          creationTimestamp: null
         spec:
           volumes:
+            - name: trusted-ca
+              configMap:
+                name: trusted-ca
+                items:
+                  - key: ca-bundle.crt
+                    path: tls-ca-bundle.pem
+                defaultMode: 420
             - name: config-volume
               configMap:
                 name: minio-test
                 defaultMode: 420
           containers:
             - name: minio-test
-              image: 'docker.io/meshistern/minio-test:1'
+              image: 'docker.io/meshistern/minio-test-secure:latest'
               resources: {}
               volumeMounts:
+                - name: trusted-ca
+                  readOnly: true
+                  mountPath: /etc/pki/ca-trust/extracted/pem
                 - name: config-volume
                   mountPath: /minio-test/src/config
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               imagePullPolicy: Always
-          restartPolicy: Never
+          restartPolicy: OnFailure
           terminationGracePeriodSeconds: 30
           dnsPolicy: ClusterFirst
           securityContext: {}
           schedulerName: default-scheduler
-      strategy:
-        type: RollingUpdate
-        rollingUpdate:
-          maxUnavailable: 25%
-          maxSurge: 25%
-      revisionHistoryLimit: 10
-      progressDeadlineSeconds: 600
+  successfulJobsHistoryLimit: 3
+  failedJobsHistoryLimit: 1
+
