--- a/argocdod/apps/toston/templates/matoshon.yaml
+++ b/argocdod/apps/toston/templates/matoshon.yaml
@@ -1,4 +1,44 @@
 ---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: toston_adminon
+  selfLink: /apis/rbac.authorization.k8s.io/v1/clusterroles/toston_adminon
+  uid: 84cce195-d083-44a1-8ad2-a7b3ba0fc1b3
+  resourceVersion: '559958'
+  creationTimestamp: '2020-10-01T13:36:01Z'
+rules:
+  - verbs:
+      - get
+      - watch
+      - list
+    apiGroups:
+      - machineconfiguration.openshift.io
+      - ''
+    resources:
+      - machineconfigpools
+      - nodes
+
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: toston_adminon
+  selfLink: /apis/rbac.authorization.k8s.io/v1/clusterrolebindings/toston_adminon
+  uid: b6382aba-d1cb-4b03-bffd-4f4dd353b45c
+  resourceVersion: '560158'
+  creationTimestamp: '2020-10-01T13:36:34Z'
+subjects:
+  - kind: ServiceAccount
+    name: default
+    namespace: toston
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: toston_adminon
+
+
+---
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
