--- a/argocdod/apps/toston/templates/matoshon.yaml
+++ b/argocdod/apps/toston/templates/matoshon.yaml
@@ -1,4 +1,10 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: toston
+
+---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
