--- a/argocdod/apps/toston/templates/app-argo.yaml
+++ b/argocdod/apps/toston/templates/app-argo.yaml
@@ -1,4 +1,10 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: toston
+
+---
 # Source: statuson/templates/cronjob.yaml
 apiVersion: batch/v1beta1
 kind: CronJob
