--- a/argocdod/apps/toston/templates/matoshon.yaml
+++ b/argocdod/apps/toston/templates/matoshon.yaml
@@ -8,7 +8,7 @@ metadata:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: toston_adminon
+  name: matoshon_adminon
   selfLink: /apis/rbac.authorization.k8s.io/v1/clusterroles/toston_adminon
   uid: 84cce195-d083-44a1-8ad2-a7b3ba0fc1b3
   resourceVersion: '559958'
@@ -29,7 +29,7 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: toston_adminon
+  name: matoshon_adminon
   selfLink: /apis/rbac.authorization.k8s.io/v1/clusterrolebindings/toston_adminon
   uid: b6382aba-d1cb-4b03-bffd-4f4dd353b45c
   resourceVersion: '560158'
@@ -41,7 +41,7 @@ subjects:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: toston_adminon
+  name: matoshon_adminon
 
 
 ---
