--- a/argocdod/apps/toston/templates/app-argo.yaml
+++ b/argocdod/apps/toston/templates/app-argo.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: toston
+  name: {{ .Values.namespace }}
 
 ---
 # Source: statuson/templates/cronjob.yaml
