--- a/argocdod/apps/quaylogs/values.yaml
+++ b/argocdod/apps/quaylogs/values.yaml
@@ -5,6 +5,7 @@ configmap:
   cluster_name: prod
   quay_token: m22zF0WNdB0apZXsURx5YNvyukGoaeMefCziaRWp
   splunk_token: 76dfd089-67f2-4262-978e-755af5c0775a
+  fqdn: dev.cloudlet-dev.com
 
 containers:
   repository: docker.io/meshistern
