--- a/argocdod/apps/minio-test/values.yaml
+++ b/argocdod/apps/minio-test/values.yaml
@@ -1,10 +1,9 @@
 configmap:
   bucket_name: mybucket
-  minio_url_1: minio.apps
-  minio_url_2: cloudlet-dev.com
   minio_access_key: minio
   minio_secret_key: minio123
   cluster_name: np
+  fqdn: dev.cloudlet-dev.com
 
 containers:
   repository: docker.io/meshistern
