--- a/argocdod/apps/toston/templates/minio-test.yaml
+++ b/argocdod/apps/toston/templates/minio-test.yaml
@@ -27,7 +27,7 @@ kind: CronJob
 apiVersion: batch/v1beta1
 metadata:
   name: minio-test
-  namespace: minio-test
+  namespace: {{ .Values.namespace }}
   labels:
     argocd.argoproj.io/instance: minio-test-dev
 spec:
