--- a/argocdod/apps/toston/values.yaml
+++ b/argocdod/apps/toston/values.yaml
@@ -5,7 +5,7 @@ configmap:
   fqdn: cloudlet.dev
   image: docker.io/nginx
 
-minio-test:
+minio_test:
   configmap:  
     minio_access_key: minio
     minio_secret_key: minio123
