--- a/argocdod/apps/toston/templates/minio-test.yaml
+++ b/argocdod/apps/toston/templates/minio-test.yaml
@@ -19,7 +19,7 @@ metadata:
 data:
   config.py: |+
     bucket_name = 'mybucket-minio-test'
-    minio_url = 'https://minio.apps.{{ .Values.configmap.fqdn }}'
+    minio_url = 'minio.apps.{{ .Values.configmap.fqdn }}'
     minio_access_key = '{{ .Values.minio_test.configmap.minio_access_key }}'
     minio_secret_key = '{{ .Values.minio_test.configmap.minio_secret_key }}'
 ---
