--- a/argocdod/apps/quaylogs/templates/deployment.yml
+++ b/argocdod/apps/quaylogs/templates/deployment.yml
@@ -28,6 +28,9 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           imagePullPolicy: Always
+          env:
+            - name: fqdn
+              value: {{ .Values.configmap.fqdn }}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
