--- a/postgrest/values.yaml
+++ b/postgrest/values.yaml
@@ -1,5 +1,9 @@
 namespace: cloudlet-mgmt
-
-PGRST_DB_URI: "host=cloudlet-postgressql.postgres.database.azure.com port=5432 dbname=postgres user=authenticator@cloudlet-postgressql password='Aa123456' sslmode=require"
-PGRST_DB_ANON_ROLE: web_anon
-PGRST_DB_SCHEMA: public
+db:
+  host: cloudlet-postgressql.postgres.database.azure.com
+  port: 5432 
+  name: postgres 
+  user: authenticator@cloudlet-postgressql 
+  pass: 'Aa123456' 
+  role: web_anon
+  schema: public
